--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
     padding: 0px 40px;
     background-color: var(--color-one);
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     z-index: 9999;
